trunk/goograde/WEB-INF/web/styles/goograde.css
/* 
Document   : goograde
Created on : Apr 23, 2009, 10:17:56 PM
Author     : pphu
Description:
*/

body {
    background-image: url(bg_blue2.png);
    background-repeat: repeat-x;
    background-color: #144370;
    font-family:  myraid, verdana, arial;
    font-size: 10pt;
}

.iconlist
{
    list-style: none;
    margin: 0;
    padding: 0;
}

li.add
{
    background-image: url('styles/knobadd.png');
    background-repeat: no-repeat;
}

li.export
{
    background-image: url('styles/knobdownload.png');
    background-repeat: no-repeat;
}

li.import
{
    background-image: url('styles/knobupload.png');
    background-repeat: no-repeat;
}

li.teacher
{
    background-image: url('styles/teacher.png');
    background-repeat: no-repeat;
}

li.student
{
    background-image: url('styles/student.png');
    background-repeat: no-repeat;
}

a:link, a:visited  {
    color: #000000;
    text-decoration: none;
}

a:hover, a:active {
    color: #518ac1; 
    text-decoration: underline;
}

#data{
    position: relative;
    top: 40px;
}


table{
    border-width: 0px;
    border-style: none;
    padding: 0;
    margin: 0;
}

th {
    font: bold 14px;
    color: #00000;
    border-right: 1px solid #C1DAD7;
    border-bottom: 1px solid #C1DAD7;
    border-top: 1px solid #C1DAD7;
    letter-spacing: 2px;
    text-transform: uppercase;
    text-align: left;
    padding: 6px 6px 6px 12px;
    background: #518ac1;
}

tr{
    border-width: 1px;
    border-style: solid;
    background-color: #98bfe3;
}
td{
    border-width: 1px;
    border-style: solid; 
    padding: 4px 6px 3px 10px;
}

td.alt{
    border-width: 1px;
    border-style: solid; 
    background-color: #98bfe3;
    padding: 3px 6px 0px 10px;
}

.ui-datepicker-month, .ui-datepicker-year{
    position: relative;
    left: 100px;
}
.ui-datepicker-next{
    float: right;    
}
.ui-datepicker-prev{
    float: left;    
}
.ui-datepicker{
    position: relative;
    top: 50px;
    
    
}
#ui-datepicker-div{
    z-index: 199;
    top: 115px !important;

}

.course-options {
    position: relative;
    top: -44px;
    left: 170px;
    width: 10px ;
    height: 20px;
    display: inline;
}
.course-options a {
    position: relative;
    width: 10px ;
    height: 20px;
    display: inline;
}
.course-opitions img{
    display: inline;
}

img {
    border:0 none;
} 

#side .cornerBoxInner{
    position: relative;
    padding-left:3px;
    /*top: -35px;*/
    padding-right:3px;
}

#coursepanel{
    position: relative;
    top: 10px;
    margin-right:auto;
    margin-left:auto;
    width: 200px;
    
}

.cornerBoxInner-blue{
    position: relative;
    padding-left:3px;
    padding-right:3px;
}
h1{
    font-family: myraid, verdana, arial;
    font-size: 30pt;
    position: relative;
    text-align: center;
    
}

h2{
    font-family: myraid, verdana, arial;
    font-size: 16pt;
    text-decoration: underline;
}
h4{
    font-size: 12pt;
    text-decoration: none;
     font-weight: normal; 
}
html, #wrap{
    height: 90%;
    width: 1000px;
    padding-bottom: 10px;
    min-height:700px;
    margin-right: auto;
    margin-left: auto;
}

body > #wrap {
    height: auto;
}

#header{
    padding-left: 70%;
    padding-right: 20px;
    width: 30%;
    font-size: 10pt;
    text-align: center;
}

#accordion{
    position: relative;
    top: 20px;
}


#content {
    padding-top: 10px;
    float: right;
    width: 740px;
    padding-bottom: 10px;
}
#index-content {
    padding-top: 10px;
    float: right;
    width: 990px;
    padding-bottom: 10px;
}
#side{
    padding-top:10px;
    padding-left: 0;
    float: left;
    width: 250px;
    padding-bottom:10px;
    height: 700px;
}

#footer {
    position: relative;
    height: 30px;
    text-align: center; 
    font-size: 9pt;
    clear:both;
    width: 1000px;
} 


#header .cornerBox {
    position: relative;
    background: #e5ecf3;
    width: 100%;
}

#header .cornerBoxInner { 
    padding: 2px; 
}

#side .cornerBox{
    position: relative; 
    background: #e5ecf3;
    width: 100%; 
    height: 100%;
}

#content .cornerBox {
    position: relative;
    background: #e5ecf3;
    min-height: 700px;
    max-height: 10000px;
    width: 100%;
}

.frontlogo{
    position: relative;
    right: 25px;
    top: 80px;
    
}

.logo{
    float: left;
}
.loginlinks{
    float: right;
    position: relative;
    right: 230px;
    top: 230px;
}
#index-content .cornerBox {
    position: relative;
    background: #e5ecf3;
    min-height: 700px;
    max-height: 10000px;
    width: 100%;
}

.cornerBox-blue {
    position: relative;
    background: #98bfe3;
    width: 100%;
}

.corner-blue {
    position: absolute;
    width: 10px;
    height: 10px;
    background: url('corners-blue.png') no-repeat; font-size: 0%; 
}

.cornerBox {
    position: relative; 
    background: #e5ecf3; 
    width: 100%; 
}

.corner { 
    position: absolute; 
    width: 10px; 
    height: 10px;
    background: url('corners.png') no-repeat; font-size: 0%; 
}

.cornerBoxInner { 
    padding: 10px; 
}

.TL { 
    top: 0; 
    left: 0;
    background-position: 0 0; 
}

.TR {
    top: 0; 
    right: 0; 
    background-position: -10px 0; 
}

.BL {
    bottom: 0; 
    left: 0; 
    background-position: 0 -10px; 
}

.BR { 
    bottom: 0; 
    right: 0; 
    background-position: -10px -10px;
}

h3{
    font-family: myraid, verdana, arial;
    font-size: 16pt;
} 

h3.trigger {
    padding: 0 0 0 50px;
    margin: 0 0 5px 0;
    background: url(course-sele.png) no-repeat;
    height: 46px;
    line-height: 46px;
    width: 195px;
    font-weight: normal;
    float: left;
}

h3.trigger a {
    color: #000;
    text-decoration: none;
    display: block;
}

h3.trigger a:hover { 
    color: #ccc; 
}

h3.active {
    width: auto;
    
} /*--When toggle is triggered, it will shift the image to the bottom to show its "opened" state--*/

.toggle_container {
    margin: 0 0 5px 20px;
    padding: 0;
    overflow: hidden;
    font-size: 14px;
    width: 200px;
    clear: both;
}

.toggle_container .block {
    padding: 5px; /*--Padding of Container--*/
    background: url(toggle_block_btm.gif) no-repeat left bottom; /*--Bottom rounded corners--*/
}

